src/test/ui/feature-gates/feature-gate-abi-avr-interrupt.stderr
error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:4:8
   |
LL | extern "avr-interrupt" fn foo() {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
